--- a/templates/security/reset_password.html.twig
+++ b/templates/security/reset_password.html.twig
@@ -6,13 +6,13 @@
 
 {% block body %}
 
-    <h1>Change your password</h1>
+    <h1 class="primary-title">Change your password</h1>
     
     {{ form_start(passForm) }}
 
         {{ form_errors(passForm) }}
         {{ form_row(passForm.plainPassword) }}
-        <button type="submit" class="btn btn-primary" >Submit</button>
+        <button type="submit" class="form-btn-submit" >Submit</button>
  
     {{ form_end(passForm) }}
 
