--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,6 +117,13 @@ nav #burger-btn {
     display: none; /* display only in tablet & phone */
 }
 
+#burger-content {
+    display: flex;
+    flex-direction: column;
+
+    order: -1;
+}
+
 /************************* Wrapper ***************************/
 /*************************************************************/
 #wrapper {
@@ -194,8 +201,9 @@ nav a:not(.nav-main) {
     transition: 0.3s;
 }
 
-
-
+nav a:first-child {
+    order: -1;
+}
 
 /************************* Table ***************************/
 /***********************************************************/
@@ -605,6 +613,12 @@ div input[type=checkbox] {
     text-decoration: none;
     background-color: var(--primary-color);
     color: var(--secondary-color-text);
+
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+.home-formation-items a p {
+    font-size: 18px;
 }
 
 #wrapper .home-formation-container .home-formation-items a:hover {
@@ -672,13 +686,15 @@ div input[type=checkbox] {
 @media only screen
 and (max-device-width : 768px) {
 
+    #wrapper.wrap-login a {
+        color: var(--secondary-color-text);
+    }
+
     #body-wrapper {
         background-color: var(--primary-background);
     
         display: flex;
         flex-direction: column;
-    
-        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
 
         min-height: 100vh;
         height: 100%;
@@ -716,32 +732,29 @@ and (max-device-width : 768px) {
     }
 
     #burger-content {
-        display: flex;
-        flex-direction: column;
-
         position: absolute;
         top: 50px;
-        right: 10%;
+        right: 0;
 
-        /* border: 1px solid var(--alert-color); */
-        border-radius: 2px ;
+        border-radius: 2px;
 
-        background-color: var(--secondary-background);
-        /* box-shadow: var(--shadow); */
+        /* background-color: var(--secondary-background); */
+        background: radial-gradient(var(--secondary-background), var(--primary-background)) ;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
         z-index: 99;
     }
 
     #nav:last-child {
-        justify-content: flex-end;
+        justify-content: flex-start;
     }
 
     #burger-content .burger-items {
-        align-self: flex-end;
+        align-self: flex-start;
     }
 
     .show {
-        width: 200px;
+        width: 210px;
         height: fit-content;
     }
 
@@ -784,7 +797,7 @@ and (max-device-width : 768px) {
     }
 
     nav .fa-caret-right {
-        display: none;
+        /* display: none; */
     }
 
     /************************ HomePage ************************/
@@ -836,129 +849,46 @@ and (max-device-width : 768px) {
         border-radius: 4px;
     }
 
-    .table-item {
-        /* padding: 0.75rem 0; */
-        font-size: var(--font-size-p);
-        color: var(--secondary-color-text);
 
-        /* flex: 1; */
-    }
-
-    .row-unique {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-
-        text-align: center;
-
-        background-color: var(--secondary-background);
-
-        border-radius: 4px;
-
-        box-shadow: var(--shadow);
-    }
-
-    .table-row {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
-
-        text-align: center;
-
-        background-color: var(--secondary-background);
-        position: relative;
-    }
-
-    .table-row:hover {
-        background-color: var(--hover-background);
-        transition: 0.5s;
-    }
-
-    .table-free {
+    /*************************** RegisterForm & UpdateUserForm ***************************/
+    /*************************************************************************************/
+    .wrap-register {
         padding: 0 15%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-
-        background-color: var(--secondary-background);
-
-        position: relative;
     }
 
-    .table-section {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
+    /* input text / number */
+    .wrap-register .form-create { 
+        display: grid;
 
-        background-color: var(--secondary-background);
+        grid-template-columns:  auto;
+        grid-template-rows: auto;
 
-        position: relative;
+        column-gap: 25px;
+        row-gap: 15px;
     }
 
-    .table-section:not(:nth-child(3)) {
-        display: flex;
-        flex-direction: column;
+    /* lastName & firstName */
+    .wrap-update-user form div:nth-child(-n + 2), .wrap-register form div:nth-child(-n + 2) { 
+        grid-column: 1 / -1;
+        padding-bottom: 0;
+    } 
 
-        position: relative;
-    }
+    /* email & phone */
+    .wrap-update-user form div:nth-child(3), .wrap-register form div:nth-child(3),
+    .wrap-update-user form div:nth-child(4), .wrap-register form div:nth-child(4) {
+        grid-column: 1 / -1;
+    } 
 
-    .table-section div {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
+    /* postCode & City */
+    .wrap-update-user form div:nth-child(7), .wrap-register form div:nth-child(7),
+    .wrap-update-user form div:nth-child(8), .wrap-register form div:nth-child(8) {
+        grid-column: 1 / -1;
+        padding-bottom: 0;
+    } 
 
-        text-align: center;
-    }
-
-    .table-section p, .table-section strong {
-        text-align: center;
-    }
-
-    .table-row:first-child, 
-    .table-free:first-child, 
-    .table-section:first-child {
-        border-top-left-radius: 4px ;
-        border-top-right-radius: 4px ;
-    }
-
-    .table-row:last-child, 
-    .table-free:last-child, 
-    .table-section:last-child {
-        border-bottom-left-radius: 4px ;
-        border-bottom-right-radius: 4px ;
-    }
-
-    .table-row:not(:last-child, :first-child), 
-    .table-section:not(:last-child, :first-child) {
-        border-bottom: 1px solid var(--primary-color);
-    }
-
-    .table-header {
-        /* height: 35px; */
-        background-color: var(--primary-color);
-    }
-
-    .table-header:hover {
-        background-color: var(--primary-color);
-    }
-
-    .table-header > .table-item {
-        font-size: var(--font-size-title);
-        font-weight: var(--weight-bold);
-    }
-
-    /* edit btn */
-    .fa-pen-to-square { 
-        font-size: 22px;
-        
-        color: var(--alert-color);
-        border: none;
-        border-radius: 50%;
-
-        position: absolute;
-        top: 25%;
-        right: 50px;
+    /* birthDate */
+    .wrap-update-user form div:nth-child(5), .wrap-register form div:nth-child(5) {
+        padding-bottom: 0;
     }
 
     /*************************** GridDetailsSession ***************************/
@@ -989,6 +919,10 @@ and (max-device-width : 768px) {
 
     .passed-sessions-content {
         display: none;
+    }
+
+    .form-create div { /* affect all div that doesn't have a date input */
+        grid-column: 1 / -1;
     }
 
 }
