--- a/templates/security/reset_password_request.html.twig
+++ b/templates/security/reset_password_request.html.twig
@@ -7,12 +7,12 @@
 
 {% block body %}
 
-    <h1>Forgot password</h1>
+    <h1 class="primary-title">Forgot password</h1>
     
     {{ form_start(requestPassForm) }}
         {{ form_row(requestPassForm.email) }}
         
-        <button type="submit" class="btn btn-primary" >Submit</button>
+        <button type="submit" class="form-btn-submit" >Submit</button>
  
     {{ form_end(requestPassForm) }}
 
