--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,8 @@
 :root {
     --danger-color: #ac1a1a;
 
+    --shadow-btn: rgba(0, 0, 0, 0.4) 0px 1px 2px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+
     --font-size-big: 35px;
     --font-size-title: 22px;
     --font-size-p: 17px;
@@ -30,6 +32,7 @@ body {
     flex-direction: row;
 
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+    z-index: 99;
 }
 
 main {
@@ -74,7 +77,6 @@ b {
     --shadow-hover: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 
     --alert-color:#d3d3d3;
-
 }
 
 .light-mode {
@@ -93,7 +95,6 @@ b {
     --shadow-hover:rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 
     --alert-color:#2b2b2b;
-
 }
 
 #switch-mode {
@@ -124,12 +125,85 @@ nav #burger-btn {
     order: -1;
 }
 
+/************************* CustomConfirm ***************************/
+/*******************************************************************/
+#custom-confirm { /* div */    
+    width: 280px;
+    height: 200px;
+
+    position: absolute;
+    top: calc(30% - 25px);
+    right: calc(50% - 140px);
+
+    background-color: var(--primary-background);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+
+    border-radius: 3px;
+    box-shadow: var(--shadow-hover);
+
+    z-index: 99;
+}
+
+.custom-confirm-text { /* p */
+    padding: 10%;
+    font-size: 18px;
+    text-align: center;
+    color: var(--alert-color);
+}
+
+#custom-confirm-buttons { /* div around btn */
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.custom-confirm-btn { /* common class between buttons */
+    width: 70px;
+    height: 40px;
+
+    font-size: 16px;
+
+    border: 0;
+    box-shadow: var(--shadow-btn);
+}
+
+#custom-confirm-yes:hover,
+#custom-confirm-no:hover {
+    filter: brightness(1.1);
+}
+
+#custom-confirm-yes:active,
+#custom-confirm-no:active {
+    filter: brightness(0.8);
+}
+
+#custom-confirm-yes { /* btn confirm */
+    background-color: var(--primary-color);
+    font-weight: var(--weight-medium);
+}
+
+#custom-confirm-no { /* btn cancel */
+    background-color: var(--danger-color);
+}
+
+.unclickable-background {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.8);
+    width: 100%;
+    height: 100%;
+}
+
 /************************* Wrapper ***************************/
 /*************************************************************/
 #wrapper {
     margin: 25px 0;
     padding: 0 3%;
     color: var(--secondary-color-text);
+
+    position: relative;
 }
 
 #wrapper a {
@@ -614,7 +688,7 @@ div input[type=checkbox] {
     background-color: var(--primary-color);
     color: var(--secondary-color-text);
 
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    box-shadow: var(--shadow-btn);
 }
 
 .home-formation-items a p {
