--- a/templates/session/update.html.twig
+++ b/templates/session/update.html.twig
@@ -28,6 +28,10 @@
         {{ form_row(updateSessionForm.dateEnd) }}
         {{ form_row(updateSessionForm.nb_slot) }}
 
+        {% for programmeField in updateSessionForm.programmes %}
+            {{ form_row(programmeField) }}  
+        {% endfor %}
+
         <button type="submit" class="form-btn-submit" >Submit</button>
     {{ form_end(updateSessionForm) }}
 
