--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,7 +38,7 @@
             <input type="password" name="password" class="form-input-text" id="inputPassword" autocomplete="current-password" required>
 
             <a href="{{ path('forgot_password')}}">
-                <p>I forgot my password</p>
+                I forgot my password
             </a>
 
             <input type="hidden" name="_csrf_token"
