--- a/templates/user/details.html.twig
+++ b/templates/user/details.html.twig
@@ -19,11 +19,7 @@
             <i class="fa-regular fa-pen-to-square"></i>
         </a>
 
-        {# <a href="{{ path('delete_user', {id:user.id}) }}" class="deleteIcon">
-            <i class="fa-regular fa-trash-can"></i>
-        </a> #}
-
-        <a href="#" class="deleteIcon">
+        <a href="{{ path('delete_user', {id:user.id}) }}" class="deleteIcon">
             <i class="fa-regular fa-trash-can"></i>
         </a>
     </div>
