--- a/public/css/style.css
+++ b/public/css/style.css
@@ -163,7 +163,9 @@ nav #burger-btn {
     height: 40px;
     font-size: 15px;
     font-weight: var(--weight-semi-bold);
+
     border: none;
+    border-radius: 4px;
     box-shadow: var(--shadow-btn);
     color: var(--secondary-color-text);
 }
@@ -185,13 +187,6 @@ nav #burger-btn {
 
 #custom-confirm-no { /* btn cancel */
     background-color: var(--danger-color);
-}
-
-.unclickable-background {
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.8);
-    width: 100%;
-    height: 100%;
 }
 
 /************************* Wrapper ***************************/
@@ -780,6 +775,25 @@ and (max-device-width : 768px) {
     b {
         font-weight: var(--weight-black);
         font-size: 18px;
+    }
+
+    /************************* CustomConfirm ***************************/
+    /*******************************************************************/
+    #custom-confirm { /* cancel */    
+        width: 300px;
+        height: 200px;
+
+        background-color: var(--primary-background);
+
+        border-radius: 3px;
+        box-shadow: var(--shadow-hover);
+        color: var(--secondary-color-text);
+
+        border: 1px solid var(--primary-color);
+
+        /* position: absolute; */
+        top: 15%;
+        left: calc(50% - 140px);
     }
 
     /************************* BurgerMenu ***************************/
