--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,11 @@
         <meta name="description" content="{% block metadesc %}{% endblock %}">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block javascript %}
-            
+        <script>
+            // Important to be 1st in the DOM
+            const theme = localStorage.getItem('theme') || 'light';
+            document.documentElement.dataset.appliedMode = theme;
+          </script>
         {% endblock javascript %}
         {% block stylesheets %}
             <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
@@ -18,7 +22,7 @@
     </head>
 
     <body>
-        <div id="body-wrapper" class="dark-mode">
+        <div id="body-wrapper" id="dark-mode">
             {% block header %}
             <header>
                 <nav>
